<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/hetfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/monday"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/htizenharom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hetfo"
        android:text="@string/one"
        />

    <TextView
        android:id="@+id/htizennegy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizenharom"
        android:text="@string/two"
        />

    <TextView
        android:id="@+id/htizenot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizennegy"
        android:text="@string/three"
        />

    <TextView
        android:id="@+id/htizenhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizenot"
        android:text="@string/four"
        />

    <TextView
        android:id="@+id/htizenhet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizenhat"
        android:text="@string/five"
        />

    <TextView
        android:id="@+id/htizennyolc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizenhet"
        android:text="@string/six"
        />

    <TextView
        android:id="@+id/htizenkilenc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizennyolc"
        android:text="@string/seven"
        />

    <TextView
        android:id="@+id/hhusz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/htizenkilenc"
        android:text="@string/eight"
        />

    <TextView
        android:id="@+id/hhuszonegy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/hhusz"
        android:text="@string/nine"
        />

    <TextView
        android:id="@+id/hhuszonketto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/hhuszonegy"
        android:text="@string/ten"
        />

    <TextView
        android:id="@+id/hhuszonharom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/hhuszonketto"
        android:text="@string/eleven"
        />










    <TextView
        android:id="@+id/kedd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toRightOf="@+id/hetfo"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tuesday"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/ktizenharom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toRightOf="@+id/htizenharom"
        app:layout_constraintTop_toBottomOf="@+id/kedd"
        android:text="@string/one"
        />

    <TextView
        android:id="@+id/ktizennegy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizenharom"
        android:text="@string/two"
        />

    <TextView
        android:id="@+id/ktizenot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizennegy"
        android:text="@string/three"
        />

    <TextView
        android:id="@+id/ktizenhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizenot"
        android:text="@string/four"
        />

    <TextView
        android:id="@+id/ktizenhet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizenhat"
        android:text="@string/five"
        />

    <TextView
        android:id="@+id/ktizennyolc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizenhet"
        android:text="@string/six"
        />

    <TextView
        android:id="@+id/ktizenkilenc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizennyolc"
        android:text="@string/seven"
        />

    <TextView
        android:id="@+id/khusz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ktizenkilenc"
        android:text="@string/eight"
        />

    <TextView
        android:id="@+id/khuszonegy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/khusz"
        android:text="@string/nine"
        />

    <TextView
        android:id="@+id/khuszonketto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/khuszonegy"
        android:text="@string/ten"
        />

    <TextView
        android:id="@+id/khuszonharom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/khuszonketto"
        android:text="@string/eleven"
        />


</androidx.constraintlayout.widget.ConstraintLayout>